--- a/app/src/main/res/layout/view_verse.xml
+++ b/app/src/main/res/layout/view_verse.xml
@@ -32,12 +32,32 @@
           android:background="@color/light_gray"/>
 
     <ImageButton
-        android:id="@+id/btn_favorite"
+        android:id="@+id/btn_share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_below="@id/line"
         android:background="@null"
+        android:src="@drawable/share"/>
+
+    <ImageButton
+        android:id="@+id/btn_favorite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/line"
+        android:layout_marginRight="16dp"
+        android:layout_toLeftOf="@id/btn_share"
+        android:background="@null"
         android:src="@drawable/like_off"/>
+
+    <ImageButton
+        android:id="@+id/btn_comment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/line"
+        android:layout_marginRight="16dp"
+        android:layout_toLeftOf="@id/btn_favorite"
+        android:background="@null"
+        android:src="@drawable/comment"/>
 
 </RelativeLayout>
