--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,8 @@
     <color name="orange">#F4A261</color>
     <color name="very_light_gray">#F1F1F1</color>
     <color name="light_gray">#D3D3D3</color>
+    <color name="dark_gray">#333333</color>
+    <color name="gray">#777777</color>
 
     <color name="colorPrimary">@color/green</color>
     <color name="colorPrimaryDark">@color/dark_green</color>
