--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="card_radius">2dp</dimen>
     <dimen name="card_elevation">0dp</dimen>
+    <dimen name="panel_handle">80dp</dimen>
 </resources>
