--- a/app/src/main/res/layout/dialog_select_book.xml
+++ b/app/src/main/res/layout/dialog_select_book.xml
@@ -3,36 +3,26 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@color/very_light_gray"
+              android:background="@color/white"
               android:orientation="vertical">
 
-    <LinearLayout android:layout_width="match_parent" android:layout_height="40dp"
-                  android:background="@color/white"
-                  android:gravity="center_vertical"
-                  android:orientation="horizontal">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        app:theme="@style/AppDialogTheme">
 
         <ImageButton android:id="@+id/btn_back"
-                     android:layout_width="0dp"
+                     android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
-                     android:layout_weight="0.15"
                      android:background="@null"
-                     android:src="@drawable/left_arrow"
+                     android:src="@drawable/back"
                      android:visibility="gone"/>
 
-        <EditText
-            android:id="@+id/et_search"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.85"
-            android:background="@color/white"
-            android:drawableRight="@drawable/little_search"
-            android:hint="@string/search"
-            android:padding="8dp"
-            android:textColor="@color/gray"
-            android:textColorHint="@color/light_gray"
-            android:textSize="12sp"/>
 
-    </LinearLayout>
+    </android.support.v7.widget.Toolbar>
 
     <ViewFlipper
         android:id="@+id/flipper"
@@ -47,9 +37,9 @@
 
             <mg.yvan.truth.ui.view.TestamentView
                 android:id="@+id/view_old_testament"
-                android:layout_marginTop="16dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"/>
 
             <ImageView
                 android:layout_width="match_parent"
@@ -88,7 +78,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignTop="@id/flipper"
-        android:layout_below="@id/et_search"
         android:visibility="gone"/>
 
 </LinearLayout>
