--- a/app/src/main/res/layout/fragment_bible.xml
+++ b/app/src/main/res/layout/fragment_bible.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent" android:layout_height="match_parent">
+
+    <com.astuetz.PagerSlidingTabStrip
+        android:id="@+id/tab_strip"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        app:pstsIndicatorColor="@color/dark_green"
+        app:pstsIndicatorHeight="2dp"
+        app:pstsUnderlineHeight="0dp"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_below="@id/tab_strip"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
