Fixed menu icons

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,19 +4,19 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_bible"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_menu_bible"
             android:title="@string/menu_bible"/>
         <item
             android:id="@+id/nav_verse"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_menu_verse"
             android:title="@string/menu_my_verse"/>
         <item
             android:id="@+id/nav_comment"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_menu_comment"
             android:title="@string/menu_my_comments"/>
         <item
             android:id="@+id/nav_statistics"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_menu_statistic"
             android:title="@string/menu_my_statistics"/>
     </group>
 
@@ -24,7 +24,7 @@
         <menu>
             <item
                 android:id="@+id/nav_logout"
-                android:icon="@drawable/ic_menu_share"
+                android:icon="@drawable/ic_menu_logout"
                 android:title="@string/logout"/>
         </menu>
     </item>
