--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,13 +20,25 @@
             android:title="@string/menu_my_statistics"/>
     </group>
 
-    <item android:title="@string/indentity">
+    <item android:id="@+id/identity"
+          android:title="@string/indentity">
         <menu>
             <item
                 android:id="@+id/nav_logout"
                 android:icon="@drawable/ic_menu_logout"
                 android:title="@string/logout"/>
+
+            <item
+                android:id="@+id/login_google"
+                android:icon="@drawable/google_plus"
+                android:title="@string/via_google"/>
+
+            <item
+                android:id="@+id/login_facebook"
+                android:icon="@drawable/facebook"
+                android:title="@string/via_facebook"/>
         </menu>
+
     </item>
 
 </menu>
