Fixed facebook and parse login

--- a/app/src/main/res/values/strings_not_translate.xml
+++ b/app/src/main/res/values/strings_not_translate.xml
@@ -4,6 +4,6 @@
 
     <string-array name="facebook_permissions">
         <item>public_profile</item>
-        <item>user_about_me</item>
+        <item>email</item>
     </string-array>
 </resources>
