Added edit comment fragment with transition

--- a/app/src/main/res/values/strings_not_translate.xml
+++ b/app/src/main/res/values/strings_not_translate.xml
@@ -6,4 +6,6 @@
         <item>public_profile</item>
         <item>email</item>
     </string-array>
+
+    <string name="transition_verse">transition_verse</string>
 </resources>
