--- a/app/src/main/res/layout/view_verse.xml
+++ b/app/src/main/res/layout/view_verse.xml
@@ -3,6 +3,8 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:clipChildren="false"
+                android:clipToPadding="false"
                 android:orientation="horizontal"
                 android:padding="8dp">
 
