--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -14,7 +14,7 @@
         <item
             android:id="@+id/nav_comment"
             android:icon="@drawable/ic_menu_comment"
-            android:title="@string/menu_comments"/>
+            android:title="@string/menu_my_comments"/>
         <item
             android:id="@+id/nav_statistics"
             android:icon="@drawable/ic_menu_statistic"
