--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,6 @@
     <dimen name="card_elevation">0dp</dimen>
     <dimen name="panel_handle">80dp</dimen>
     <dimen name="photo_size">72dp</dimen>
+    <dimen name="view_comment_public_padding_top">28dp</dimen>
+    <dimen name="view_comment_normal_padding_top">8dp</dimen>
 </resources>
