--- a/app/src/main/res/layout/view_reference.xml
+++ b/app/src/main/res/layout/view_reference.xml
@@ -24,7 +24,7 @@
             android:text="@string/new_comment"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textColor="@color/dark_green"
-            android:textSize="18sp"/>
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/tv_date"
@@ -56,15 +56,29 @@
               android:layout_marginTop="8dp"
               android:background="@color/light_gray"/>
 
-        <ImageButton
-            android:id="@+id/btn_delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginBottom="8dp"
-            android:layout_marginRight="8dp"
-            android:background="@null"
-            android:src="@drawable/delete"/>
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:orientation="horizontal">
+
+            <TextView android:id="@+id/tv_more_comment"
+                      android:layout_width="0dp"
+                      android:layout_height="wrap_content"
+                      android:layout_marginLeft="8dp"
+                      android:layout_weight="1"
+                      android:textSize="11sp"
+                      tools:text="2 more comments"/>
+
+            <ImageButton
+                android:id="@+id/btn_delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginBottom="8dp"
+                android:layout_marginRight="8dp"
+                android:background="@null"
+                android:src="@drawable/delete"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
