--- a/app/src/main/res/layout/fragment_edit_comment.xml
+++ b/app/src/main/res/layout/fragment_edit_comment.xml
@@ -21,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_ref"
+        android:layout_marginBottom="8dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:textColor="@color/black"
@@ -32,7 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/tv_verse"
-        android:padding="16dp"/>
+        android:padding="8dp"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
