--- a/app/src/main/res/layout/fragment_base_list.xml
+++ b/app/src/main/res/layout/fragment_base_list.xml
@@ -3,24 +3,28 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:background="@color/very_light_gray"
               android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tv_result"
+        android:id="@+id/tv_number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="16dp"
         android:paddingTop="12dp"
         tools:text="0 résultat"/>
 
-    <android.support.v7.widget.RecyclerView
+    <co.moonmonkeylabs.realmrecyclerview.RealmRecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/tv_number"
         android:paddingBottom="8dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
+        app:rrvLayoutType="LinearLayout"
+        app:rrvEmptyLayoutId="@layout/view_empty"
         android:paddingTop="8dp"
         android:scrollbars="vertical"/>
 
