--- a/app/src/main/res/layout/fragment_my_comments.xml
+++ b/app/src/main/res/layout/fragment_my_comments.xml
@@ -15,7 +15,7 @@
         tools:text="0 résultat"/>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recylerview"
+        android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/tv_number"
