Fixed new and delete comment synchronization

--- a/app/src/main/res/layout/fragment_edit_comment.xml
+++ b/app/src/main/res/layout/fragment_edit_comment.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/very_light_gray">
 
 
@@ -28,12 +29,14 @@
         android:textSize="12sp"
         tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nibh enim. Vestibulum volutpat elit sed mattis efficitur. Donec imperdiet quam dolor, et aliquam felis fringilla a. Donec imperdiet neque non nulla gravida tristique. Maecenas malesuada erat vel gravida efficitur. Pellentesque sit amet sollicitudin ipsum. Vestibulum bibendum purus et purus aliquet, in pulvinar enim vestibulum. Pellentesque eu lacus a quam imperdiet pretium in eget tortor. Proin quis massa vehicula, gravida purus et, hendrerit dolor. Quisque justo magna, consequat eget scelerisque et, semper fermentum magna. Donec rhoncus, mauris et rutrum vulputate, orci nunc viverra metus, sed rutrum arcu ipsum a ante"/>
 
-    <android.support.v7.widget.RecyclerView
+    <co.moonmonkeylabs.realmrecyclerview.RealmRecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/tv_verse"
-        android:padding="8dp"/>
+        android:padding="8dp"
+        app:rrvEmptyLayoutId="@layout/view_empty"
+        app:rrvLayoutType="LinearLayout"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
